formatting fixes (font size, alignment, etc)

--- a/styles/site.css
+++ b/styles/site.css
@@ -18,9 +18,11 @@ div.scroll-bounce {
   0% {
     top: 0;
   }
+
   50% {
     top: 5px;
   }
+
   100% {
     top: 0px;
   }
@@ -62,14 +64,15 @@ div#car-info {
   justify-content: space-between;
 }
 
-#lineBlank{
+#lineBlank {
   font-weight: bold;
 }
 
 div#car-description {
   margin-top: 10px;
   margin-left: 8px;
-  margin-right: 10px;
+  margin-right: 20px;
+  font-size: 18px;
 }
 
 div#car-and-points {
@@ -101,7 +104,7 @@ div#car-and-points {
 }
 
 .car-popup p:first-child {
-  text-align: center; 
+  text-align: center;
   font-weight: bold;
   margin-bottom: 2px;
 }
@@ -161,6 +164,7 @@ div#car-and-points {
   top: -80px;
   left: 400px;
 }
+
 /* end: circles on the car image */
 
 
@@ -181,9 +185,8 @@ div#map {
 }
 
 #scatterText {
-  width: 350px;
-  font-size: 20px;
-  margin-right: 30px;
+  width: 400px;
+  font-size: 18px;
 }
 
 #driverYearStats {
@@ -246,7 +249,7 @@ h3.popupTitle {
 }
 
 .axis {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .axis-label {
@@ -265,12 +268,13 @@ div#scatterArea {
 
 div#lineText {
   width: 400px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .bar-desc {
-  width: 460px;
+  width: 400px;
   font-size: 18px;
+  margin-right: 60px;
 }
 
 button {
@@ -292,4 +296,9 @@ button {
 
 .next-button:hover {
   background-color: rgba(82, 82, 82, 0.493);
+}
+
+#scatterAnnotations {
+  /* padding-right: 50px; */
+  margin-left: -50px;
 }
